--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,9 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 		monospace;
 }
+
+html {
+	padding: 0;
+	margin: 0;
+	width: 100%;
+}
